# robotframework-dependencysolver

./: .gitignore  CHANGELOG.md  README.dev.md  README.md  pyproject.toml  release.sh  release_notes.md  release_notes_template.md  update_version_and_changelog.sh
.github/workflows/: test-and-release.yml
src/DependencySolver/: run.py  solver.py  ui.py
tests/data_1/: __init__.robot  suiteA.robot  suiteB.robot
tests/data_10/: 01__suite_A.robot  01__suite_A_copy.robot  __init__.robot  resource.robot
tests/data_11/: 01__suite_A.robot  03__suite_H.robot  04__suite_I.robot  06__suite_P.robot  __init__.robot
tests/data_11/02__subsuite_a/: 02__suite_D.robot  04__suite_G.robot  __init__.robot
tests/data_12/: 01__suite_A.robot  __init__.robot
tests/data_13/: suite_a.robot
tests/data_2/: __init__.robot  suiteC.robot
tests/data_3/: __init__.robot  suiteC.robot
tests/data_4/: __init__.robot  suiteD.robot  suiteE.robot
tests/data_5/: __init__.robot  suiteD.robot  suiteE.robot
tests/data_6/: __init__.robot  suiteD.robot  suiteE.robot
tests/data_7/: 01__suite_A.robot  03__suite_H.robot  04__suite_I.robot  06__suite_P.robot  __init__.robot
tests/data_8/: __init__.robot  suiteA.robot  suiteB.robot
tests/data_9/: __init__.robot  suiteA.robot  suiteB.robot
tests/pabot_ordering_references/: TestA3.txt  TestA3_long_call.txt  TestA6.txt  TestB3.txt  TestB5.txt  complicated_call.txt  keyword_in_suite_setup.txt  not_unambigous.txt  pabot_grouping.txt  rerun.txt  robot_test_setup.txt  suite_duplicate.txt  test_duplicate.txt  test_names.txt
(+25 files in other folders)
